--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lesshat": "^4.1.0",
+    "mongoose": "^5.12.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
